--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Lucas Morales <lucas@lucasem.com>"]
 
 [dependencies]
 itertools = "0.7"
-lazy_static = "1.0"
 nom = "4.0.0-beta1"
 polytype = "1.2"
+rand = "0.4"
 rayon = "1.0"
