--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["language", "inference", "bayesian", "genetic", "learning"]
 categories = ["algorithms", "science"]
 
 [dependencies]
+crossbeam-channel = "0.1"
 itertools = "0.7"
 lazy_static = "1.0"
 nom = "4.0.0-beta2"
