--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,11 @@ rand = "0.4"
 rayon = "1.0"
 workerpool = "1.1"
 
+[dev-dependencies]
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
+
 [features]
 racket = []
 par_enum = []
