--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ rust:
   - beta
   - nightly
 script:
-  - cargo build --verbose
-  - cargo test  --verbose --release
-  - cargo doc   --verbose
+  - cargo build   --verbose
+  - cargo test    --verbose --release
+  - cargo rustdoc --verbose -- --html-in-header rustdoc-include-katex-header.html
 matrix:
   fast_failures: true
   allow_failures:
