--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 matrix:
   fast_failures: true
   allow_failures:
-    - env: KCOV=1
+    - rust: nightly-2018-03-06
   include:
     - rust: nightly-2018-03-06
       env:
@@ -22,7 +22,8 @@ matrix:
       script:
         - cargo fmt -- --write-mode=diff
         - cargo clippy
-    - env: KCOV=1
+    - rust: nightly-2018-03-06
+      env: KCOV=1
       sudo: required # travis-ci/travis-ci#9061
       before_script:
         - cargo install cargo-update || echo "cargo-update already installed"
