--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ maplit = "1.0"
 nom = "4.0.0-beta2"
 num_cpus = "1.8"
 polytype = "2.1"
-rand = "0.4"
+rand = "0.5.0-pre.0"
 rayon = "1.0"
 
 [dev-dependencies]
