--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9e
 crossbeam-channel = "0.1"
 itertools = "0.7"
 lazy_static = "1.0"
+maplit = "1.0"
 nom = "4.0.0-beta2"
 num_cpus = "1.8"
 polytype = "2.1"
