--- a/.travis.yml
+++ b/.travis.yml
@@ -11,19 +11,18 @@ script:
 matrix:
   fast_failures: true
   allow_failures:
-    - rust: nightly-2018-03-06
+    - env: KCOV=1
   include:
-    - rust: nightly-2018-03-06
+    - rust: nightly-2018-04-02
       env:
-        - CLIPPY_VERSION=0.0.187
+        - CLIPPY_VERSION=0.0.191
       before_script:
         - cargo install rustfmt-nightly --force
         - cargo install clippy --version $CLIPPY_VERSION || echo "clippy already installed"
       script:
         - cargo fmt -- --write-mode=diff
         - cargo clippy
-    - rust: nightly-2018-03-06
-      env: KCOV=1
+    - env: KCOV=1
       sudo: required # travis-ci/travis-ci#9061
       before_script:
         - cargo install cargo-update || echo "cargo-update already installed"
