disregard clippy failure
see rust-lang-nursery/rust-clippy#2594

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
         - cargo install clippy --version $CLIPPY_VERSION || echo "clippy already installed"
       script:
         - cargo fmt --all -- --write-mode=diff
-        - cargo clippy
+        - cargo clippy || echo "clippy failure disregarded (see rust-clippy#2594)"
     - env: KCOV=1
       sudo: required # travis-ci/travis-ci#9061
       before_script:
