--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ crossbeam-channel = "0.1"
 itertools = "0.7"
 lazy_static = "1.0"
 maplit = "1.0"
-nom = "4.0.0-beta3"
+nom = "4.0.0"
 polytype = "4.2"
 rand = "0.5.0-pre.2"
 rayon = "1.0"
