--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ lazy_static = "1.0"
 maplit = "1.0"
 nom = "4.0.0"
 polytype = "4.2"
-rand = "0.5.0-pre.2"
+rand = "0.5"
 rayon = "1.0"
 
 [dev-dependencies]
