--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ nom = "4.0"
 polytype = "5.0"
 rand = "0.5"
 rayon = "1.0"
+term_rewriting = "0.2"
 
 [dev-dependencies]
 serde = "1.0"
@@ -31,3 +32,6 @@ serde_derive = "1.0"
 
 [features]
 verbose = []
+
+[patch.crates-io]
+term_rewriting = { path = "../term-rewriting-rs" }
