--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ matrix:
     - rust: nightly
       env: CLIPPY=1
       before_script:
-        - cargo install clippy --git https://github.com/rust-lang-nursery/rust-clippy || echo "clippy already installed"
+        - cargo install clippy --force --git https://github.com/rust-lang-nursery/rust-clippy
       script:
         - cargo clippy
