--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,7 @@ nom = "4.2"
 polytype = "6.0"
 rand = "0.6"
 rayon = "1.0"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 term_rewriting = "0.5"
 
 [dev-dependencies]
