--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "programinduction"
 version = "0.8.0"
-authors = ["Lucas Morales <lucas@lucasem.com>"]
+authors = ["Lore Anaya Pozo <lore.a.pozo@outlook.com>"]
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/lucasem/program-induction"
-homepage = "https://github.com/lucasem/program-induction"
+repository = "https://github.com/lorepozo/program-induction"
+homepage = "https://github.com/lorepozo/program-induction"
 documentation = "https://docs.rs/programinduction"
 description = "A library for program induction and learning representations."
 keywords = ["language", "inference", "bayesian", "genetic", "learning"]
