--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,16 +16,16 @@ categories = ["algorithms", "science"]
 rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/programinduction-0.3.0/rustdoc-include-katex-header.html"]
 
 [dependencies]
-crossbeam-channel = "0.3"
-itertools = "0.8"
-lazy_static = "1.3"
-maplit = "1.0"
+crossbeam-channel = "0.5.8"
+itertools = "0.11.0"
+once_cell = "1.18.0"
 nom = "4.2"
 polytype = "6.1"
-rand = "0.6"
-rayon = "1.0"
+rand = { version = "0.8.5", features = ["small_rng"] }
+rayon = "1.8.0"
 serde = { version = "1.0", features = ["derive"] }
-term_rewriting = "0.5"
+rand_core = "^0.3" # for compat with term_rewriting 0.7 (on old version of rand)
+term_rewriting = "0.7.0"
 
 [dev-dependencies]
 serde_json = "1.0"
