relativize docs.rs katex included header

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["language", "inference", "bayesian", "genetic", "learning"]
 categories = ["algorithms", "science"]
 
 [package.metadata.docs.rs]
-rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/programinduction-0.3.0/rustdoc-include-katex-header.html"]
+rustdoc-args = ["--html-in-header", "rustdoc-include-katex-header.html"]
 
 [dependencies]
 crossbeam-channel = "0.5.8"
