--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,13 +19,14 @@ rustdoc-args = ["--html-in-header", "rustdoc-include-katex-header.html"]
 crossbeam-channel = "0.5.8"
 itertools = "0.11.0"
 once_cell = "1.18.0"
-nom = "4.2"
 polytype = "6.1"
 rand = { version = "0.8.5", features = ["small_rng"] }
 rayon = "1.8.0"
 serde = { version = "1.0", features = ["derive"] }
 rand_core = "^0.3" # for compat with term_rewriting 0.7 (on old version of rand)
 term_rewriting = "0.7.0"
+winnow = "0.5.28"
+unicode-xid = "0.2.4"
 
 [dev-dependencies]
 serde_json = "1.0"
