--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,15 +1,12 @@
-name: Cargo Build & Test
+name: CI
 
-on:
-  push:
-  pull_request:
+on: [push, pull_request]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build_and_test:
-    name: Rust project - latest
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
